--- a/Notebooks/FlaskApi.ipynb
+++ b/Notebooks/FlaskApi.ipynb
@@ -123,11 +123,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "fdf97673",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -170,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 35,
    "id": "57cc7cb5",
    "metadata": {},
    "outputs": [
@@ -190,12 +188,13 @@
      "output_type": "stream",
      "text": [
       " * Running on http://127.0.0.1:5000/ (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [13/Mar/2022 03:30:03] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [13/Mar/2022 03:30:22] \"\u001b[37mPOST /prediction HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [13/Mar/2022 03:31:47] \"\u001b[37mPOST /prediction HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [13/Mar/2022 03:32:34] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [13/Mar/2022 03:32:44] \"\u001b[37mPOST /prediction HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [13/Mar/2022 03:33:09] \"\u001b[37mPOST /prediction HTTP/1.1\u001b[0m\" 200 -\n"
+      "127.0.0.1 - - [13/Mar/2022 14:54:56] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [13/Mar/2022 14:55:23] \"\u001b[37mPOST /prediction HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [13/Mar/2022 14:55:43] \"\u001b[37mPOST /prediction HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [13/Mar/2022 14:56:33] \"\u001b[37mPOST /prediction HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [13/Mar/2022 14:58:20] \"\u001b[37mPOST /prediction HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [13/Mar/2022 14:59:43] \"\u001b[37mPOST /prediction HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [13/Mar/2022 14:59:57] \"\u001b[37mPOST /prediction HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     }
    ],
@@ -218,7 +217,7 @@
     "    tokenized_for_bert = tokenizer.encode(preprocessed_text, truncation=True, padding=True, return_tensors=\"tf\")\n",
     "    \n",
     "    # Do prediction using two models\n",
-    "    ml_predict = f\"SVM Prediction: {svm_pipeline.predict(tokenized_for_ml)[0]}\"\n",
+    "    ml_predict = f\"SVM Prediction: {svm_pipeline.predict([f'{tokenized_for_ml}'])[0]}\"\n",
     "    bert_predict = f\"MARBERT Prediction: {dialects_dict[np.argmax(marebert_model.predict(tokenized_for_bert)[0], axis=1)[0]]}\"\n",
     "    \n",
     "    # Rendering with predictions\n",
@@ -230,7 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d86b6592",
+   "id": "8c91dc0e",
    "metadata": {},
    "outputs": [],
    "source": []
